yaml/gke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    application: application
    owner: MediaMarkt
  name: application
