yaml/gke/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  namespace: devops-challenge
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app/name: "application"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app/name: "application"
    spec:
      containers:
      - name: application
        image: eu.gcr.io/ashyiuxwrqr2ga014uqhvvejykgukw/devops-challenge@sha256:5421debb1c11fca4462130b330511656aac168494a5508219eb29cbcb7a6e35a
        ports:
          - containerPort: 3000
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 540m
            memory: 400Mi
          requests:
            cpu: 180m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: "File"
