yaml/gke/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  name: application-svc
  namespace: devops-challenge
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app/name: application
  sessionAffinity: None
  type: ClusterIP
